jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: default
spec:
  rules:
  - host: k8s-jenkins.maotai.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
